welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:4: error: reassignment to val
  if (talking=true && hour>20){
             ^parotTrouble:6: error: reassignment to val
  }else if(talking=true && hour<7){
                  ^